# samp-rs-asi

./: Cargo.toml  LICENSE  Makefile.toml  README.md
src/: lib.rs  plugin.rs  samp.rs
